JumpScript/tests/baselines/reference/noTypeArgumentOnReturnType1.errors.txt
tests/cases/compiler/noTypeArgumentOnReturnType1.jump(3,9): error TS2314: Generic type 'A<T>' requires 1 type argument(s).


==== tests/cases/compiler/noTypeArgumentOnReturnType1.jump (1 errors) ====
    class A<T>{
     
     foo(): A{
            ~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).
      return null;
     }
    }